acvm-repo/msgpack_tagged/tests/compile_fail/tag_unknown_modifier.stderr
error: unexpected modifier `foo` — `#[tag(...)]` accepts a single integer tag literal
 --> tests/compile_fail/tag_unknown_modifier.rs:9:14
  |
9 |     #[tag(0, foo)]
  |              ^^^
